--- a/frontend/templates/admin_eventos.html
+++ b/frontend/templates/admin_eventos.html
@@ -22,7 +22,8 @@
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb">
                             <li class="breadcrumb-item"><a href="/admin">Panel Admin</a></li>
-                            <li class="breadcrumb-item active">Eventos</li>
+                            <li class="breadcrumb-item"><a href="/admin/eventos-panel">Panel Eventos</a></li>
+                            <li class="breadcrumb-item active">Gestión de Eventos</li>
                         </ol>
                     </nav>
                 </div>
