--- a/frontend/templates/admin_panel.html
+++ b/frontend/templates/admin_panel.html
@@ -18,7 +18,7 @@
         <div class="container text-center mt-5">
             <h1 class="mb-4">Panel de administración</h1>
             <div class="d-grid gap-3 col-6 mx-auto">
-                <a href="/admin/eventos" class="btn btn-panel btn-lg">Eventos</a>
+                <a href="/admin/eventos-panel" class="btn btn-panel btn-lg">Eventos</a>
                 <a href="/admin/tienda-panel" class="btn btn-panel btn-lg">Tienda</a>
                 <a href="/admin/ebooks-panel" class="btn btn-panel btn-lg">Ebooks</a>                
                 <a href="/" class="btn btn-panel btn-lg">Página principal</a>
