--- a/frontend/templates/admin_categorias_ebooks.html
+++ b/frontend/templates/admin_categorias_ebooks.html
@@ -33,7 +33,7 @@
 
             <div>
                 <a href="/admin/categorias_ebooks" class="btn btn-dark mb-3">Todas</a>
-                <a href="/admin/categorias_ebooks/padres" class="btn btn-dark mb-3">Padres</a>                
+                <a href="/admin/categorias_ebooks/padres" class="btn btn-dark mb-3">Madres</a>                
             </div>
 
             <div class="hscroll">
@@ -42,8 +42,8 @@
                         <tr>
                             <th>ID</th>
                             <th>Nombre</th>
-                            <th>Padre</th>
-                            <th>Hijos</th>
+                            <th>Madre</th>
+                            <th>Hijes</th>
                             <th>Acciones</th>
                         </tr>
                     </thead>
