--- a/frontend/templates/admin_tienda_panel.html
+++ b/frontend/templates/admin_tienda_panel.html
@@ -24,7 +24,7 @@
                 <a href="/admin/promociones-productos" class="btn btn-panel btn-lg">Promociones y Productos</a>
                 <a href="/admin/cupones" class="btn btn-panel btn-lg">Cupones</a>
                 <a href="/admin/ordenes" class="btn btn-panel btn-lg">Órdenes</a>
-                <a href="/admin/envios" class="btn btn-panel btn-lg">Costos de Envío</a>
+                <a href="/admin/envios" class="btn btn-panel btn-lg">Envíos</a>
                 
             </div>
         </div>
